--- a/[Patient-Level] (1) Clinical_data_import_mini copy.ipynb
+++ b/[Patient-Level] (1) Clinical_data_import_mini copy.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "4                                        NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,6 +757,319 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dicom_id</th>\n",
+       "      <th>subject_id</th>\n",
+       "      <th>study_id</th>\n",
+       "      <th>PerformedProcedureStepDescription</th>\n",
+       "      <th>ViewPosition</th>\n",
+       "      <th>Rows</th>\n",
+       "      <th>Columns</th>\n",
+       "      <th>StudyDate</th>\n",
+       "      <th>StudyTime</th>\n",
+       "      <th>ProcedureCodeSequence_CodeMeaning</th>\n",
+       "      <th>ViewCodeSequence_CodeMeaning</th>\n",
+       "      <th>PatientOrientationCodeSequence_CodeMeaning</th>\n",
+       "      <th>in_eye_gaze</th>\n",
+       "      <th>in_reflacx</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>177</th>\n",
+       "      <td>fa771fa1-d9571d07-bff8f655-327734a7-6e10b29d</td>\n",
+       "      <td>10002428</td>\n",
+       "      <td>59258773</td>\n",
+       "      <td>CHEST (PORTABLE AP)</td>\n",
+       "      <td>AP</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>21560419</td>\n",
+       "      <td>92717.109</td>\n",
+       "      <td>CHEST (PORTABLE AP)</td>\n",
+       "      <td>antero-posterior</td>\n",
+       "      <td>Erect</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181</th>\n",
+       "      <td>4873aa08-977bfd31-fb492e64-6ef432d1-3f12cbe3</td>\n",
+       "      <td>10002430</td>\n",
+       "      <td>53254222</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>21250928</td>\n",
+       "      <td>160736.171</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>postero-anterior</td>\n",
+       "      <td>Erect</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>266</th>\n",
+       "      <td>dcdc4bd9-4301b111-2a65a814-ee8e7bc5-7f0b9a5a</td>\n",
+       "      <td>10003400</td>\n",
+       "      <td>56466802</td>\n",
+       "      <td>CHEST (PORTABLE AP)</td>\n",
+       "      <td>AP</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>21361209</td>\n",
+       "      <td>133738.015</td>\n",
+       "      <td>CHEST (PORTABLE AP)</td>\n",
+       "      <td>antero-posterior</td>\n",
+       "      <td>Erect</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>497</th>\n",
+       "      <td>5bdabba9-388f6646-ac06b5f5-f68b2fd2-3630de21</td>\n",
+       "      <td>10011607</td>\n",
+       "      <td>55814288</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>AP</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>21820111</td>\n",
+       "      <td>230933.250</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>antero-posterior</td>\n",
+       "      <td>Erect</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>539</th>\n",
+       "      <td>4a629500-9c3281ca-90bab490-9b6ac9c1-e5e6a580</td>\n",
+       "      <td>10012261</td>\n",
+       "      <td>53728467</td>\n",
+       "      <td>CHEST (PORTABLE AP)</td>\n",
+       "      <td>AP</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>21750906</td>\n",
+       "      <td>191151.453</td>\n",
+       "      <td>CHEST (PORTABLE AP)</td>\n",
+       "      <td>antero-posterior</td>\n",
+       "      <td>Erect</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>376634</th>\n",
+       "      <td>d9661ff6-877ac981-a20a8810-92309d46-173008ad</td>\n",
+       "      <td>19991135</td>\n",
+       "      <td>50498205</td>\n",
+       "      <td>CHEST (PORTABLE AP)</td>\n",
+       "      <td>AP</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>21260910</td>\n",
+       "      <td>53556.406</td>\n",
+       "      <td>CHEST (PORTABLE AP)</td>\n",
+       "      <td>antero-posterior</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>376636</th>\n",
+       "      <td>d8f5555c-d8bcf97c-3a9d5596-17b9f854-6e15d081</td>\n",
+       "      <td>19991135</td>\n",
+       "      <td>50634986</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>1736</td>\n",
+       "      <td>21261102</td>\n",
+       "      <td>151208.000</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>postero-anterior</td>\n",
+       "      <td>Erect</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>376644</th>\n",
+       "      <td>d04bbcbd-5143439e-50ebe9a8-71380f67-44f8d127</td>\n",
+       "      <td>19991135</td>\n",
+       "      <td>54910031</td>\n",
+       "      <td>CHEST (PORTABLE AP)</td>\n",
+       "      <td>AP</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>21260908</td>\n",
+       "      <td>202437.031</td>\n",
+       "      <td>CHEST (PORTABLE AP)</td>\n",
+       "      <td>antero-posterior</td>\n",
+       "      <td>Erect</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>377010</th>\n",
+       "      <td>7cfe7acc-65b0b548-feb77772-04c46d33-76a03230</td>\n",
+       "      <td>19997367</td>\n",
+       "      <td>58396642</td>\n",
+       "      <td>CHEST (PORTABLE AP)</td>\n",
+       "      <td>AP</td>\n",
+       "      <td>2712</td>\n",
+       "      <td>2402</td>\n",
+       "      <td>21260425</td>\n",
+       "      <td>134114.328</td>\n",
+       "      <td>CHEST (PORTABLE AP)</td>\n",
+       "      <td>antero-posterior</td>\n",
+       "      <td>Erect</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>377014</th>\n",
+       "      <td>1bdf3180-0209f001-967acab6-0b811ea2-3c2e13eb</td>\n",
+       "      <td>19997367</td>\n",
+       "      <td>58801152</td>\n",
+       "      <td>CHEST (PORTABLE AP)</td>\n",
+       "      <td>AP</td>\n",
+       "      <td>2539</td>\n",
+       "      <td>2532</td>\n",
+       "      <td>21280210</td>\n",
+       "      <td>131013.078</td>\n",
+       "      <td>CHEST (PORTABLE AP)</td>\n",
+       "      <td>antero-posterior</td>\n",
+       "      <td>Erect</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3689 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            dicom_id  subject_id  study_id  \\\n",
+       "177     fa771fa1-d9571d07-bff8f655-327734a7-6e10b29d    10002428  59258773   \n",
+       "181     4873aa08-977bfd31-fb492e64-6ef432d1-3f12cbe3    10002430  53254222   \n",
+       "266     dcdc4bd9-4301b111-2a65a814-ee8e7bc5-7f0b9a5a    10003400  56466802   \n",
+       "497     5bdabba9-388f6646-ac06b5f5-f68b2fd2-3630de21    10011607  55814288   \n",
+       "539     4a629500-9c3281ca-90bab490-9b6ac9c1-e5e6a580    10012261  53728467   \n",
+       "...                                              ...         ...       ...   \n",
+       "376634  d9661ff6-877ac981-a20a8810-92309d46-173008ad    19991135  50498205   \n",
+       "376636  d8f5555c-d8bcf97c-3a9d5596-17b9f854-6e15d081    19991135  50634986   \n",
+       "376644  d04bbcbd-5143439e-50ebe9a8-71380f67-44f8d127    19991135  54910031   \n",
+       "377010  7cfe7acc-65b0b548-feb77772-04c46d33-76a03230    19997367  58396642   \n",
+       "377014  1bdf3180-0209f001-967acab6-0b811ea2-3c2e13eb    19997367  58801152   \n",
+       "\n",
+       "       PerformedProcedureStepDescription ViewPosition  Rows  Columns  \\\n",
+       "177                  CHEST (PORTABLE AP)           AP  3056     2544   \n",
+       "181                   CHEST (PA AND LAT)           PA  3056     2544   \n",
+       "266                  CHEST (PORTABLE AP)           AP  3056     2544   \n",
+       "497                   CHEST (PA AND LAT)           AP  3056     2544   \n",
+       "539                  CHEST (PORTABLE AP)           AP  2544     3056   \n",
+       "...                                  ...          ...   ...      ...   \n",
+       "376634               CHEST (PORTABLE AP)           AP  3056     2544   \n",
+       "376636                               NaN           PA  2022     1736   \n",
+       "376644               CHEST (PORTABLE AP)           AP  3056     2544   \n",
+       "377010               CHEST (PORTABLE AP)           AP  2712     2402   \n",
+       "377014               CHEST (PORTABLE AP)           AP  2539     2532   \n",
+       "\n",
+       "        StudyDate   StudyTime ProcedureCodeSequence_CodeMeaning  \\\n",
+       "177      21560419   92717.109               CHEST (PORTABLE AP)   \n",
+       "181      21250928  160736.171                CHEST (PA AND LAT)   \n",
+       "266      21361209  133738.015               CHEST (PORTABLE AP)   \n",
+       "497      21820111  230933.250                CHEST (PA AND LAT)   \n",
+       "539      21750906  191151.453               CHEST (PORTABLE AP)   \n",
+       "...           ...         ...                               ...   \n",
+       "376634   21260910   53556.406               CHEST (PORTABLE AP)   \n",
+       "376636   21261102  151208.000                CHEST (PA AND LAT)   \n",
+       "376644   21260908  202437.031               CHEST (PORTABLE AP)   \n",
+       "377010   21260425  134114.328               CHEST (PORTABLE AP)   \n",
+       "377014   21280210  131013.078               CHEST (PORTABLE AP)   \n",
+       "\n",
+       "       ViewCodeSequence_CodeMeaning  \\\n",
+       "177                antero-posterior   \n",
+       "181                postero-anterior   \n",
+       "266                antero-posterior   \n",
+       "497                antero-posterior   \n",
+       "539                antero-posterior   \n",
+       "...                             ...   \n",
+       "376634             antero-posterior   \n",
+       "376636             postero-anterior   \n",
+       "376644             antero-posterior   \n",
+       "377010             antero-posterior   \n",
+       "377014             antero-posterior   \n",
+       "\n",
+       "       PatientOrientationCodeSequence_CodeMeaning  in_eye_gaze  in_reflacx  \n",
+       "177                                         Erect        False        True  \n",
+       "181                                         Erect         True       False  \n",
+       "266                                         Erect        False        True  \n",
+       "497                                         Erect        False        True  \n",
+       "539                                         Erect        False        True  \n",
+       "...                                           ...          ...         ...  \n",
+       "376634                                        NaN        False        True  \n",
+       "376636                                      Erect        False        True  \n",
+       "376644                                      Erect        False        True  \n",
+       "377010                                      Erect        False        True  \n",
+       "377014                                      Erect        False        True  \n",
+       "\n",
+       "[3689 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CXR_meta_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -935,7 +1248,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "447712"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(ed_edstays_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1051,7 +1384,7 @@
        "4      F  WHITE         AMBULANCE    ADMITTED  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1088,7 +1421,6 @@
     "\n",
     "# ed\n",
     "\n",
-    "\n",
     "# Core_transfers_df = pd.read_csv(os.path.join(\n",
     "#     CLINICAL_FOLDER_PATH, \"core\", \"transfers.csv\"))\n",
     "# Core_admissions_df = pd.read_csv(os.path.join(\n",
@@ -1123,6 +1455,13 @@
     "\n",
     "ed_edstays_df.head(5)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
