--- a/[Patient-Level] (3) REFLACX_MIMIC_import copy.ipynb
+++ b/[Patient-Level] (3) REFLACX_MIMIC_import copy.ipynb
@@ -295,7 +295,8 @@
     "            gaze_source_path = os.path.join(\n",
     "                REFLACX_FOLDER_PATH, \"gaze_data\", study_id)\n",
     "            gaze_destination_path = os.path.join(save_folder_path, \"gaze_data\",study_id)\n",
-    "            copytree(gaze_source_path, gaze_destination_path, dirs_exist_ok=True, copy_function=copy)"
+    "            copytree(gaze_source_path, gaze_destination_path, dirs_exist_ok=True, copy_function=copy)\n",
+    "            os.remove(os.path.join(gaze_destination_path, \"index.html\"))"
    ]
   },
   {
